--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "firebase": "^10.1.0",
     "next": "^12.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
